# pico-otel

./: .coveragerc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish-to-pypi.yml
docs/: CHANGELOG.md  LEARN.md  architecture.md  faq.md  getting-started.md  index.md  llms.txt  requirements.txt  troubleshooting.md
docs/reference/: api.md  index.md
src/pico_otel/: __init__.py  bootstrap.py  config.py
tests/: conftest.py  test_bootstrap_units.py  test_otel.py
