[build-system]
requires = ["setuptools>=69.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-otel"
dynamic = ["version"]
authors = [{ name = "David Perez Cabrera", email = "dperezcabrera@gmail.com" }]
description = "OpenTelemetry auto-instrumentation for the Pico ecosystem: tracing, metrics and log correlation wired by entry points."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["opentelemetry", "otel", "tracing", "metrics", "observability", "ioc", "spring boot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "pico-ioc >= 2.2.0",
    "opentelemetry-sdk >= 1.25",
]

[project.optional-dependencies]
otlp = ["opentelemetry-exporter-otlp"]
prometheus = ["opentelemetry-exporter-prometheus", "prometheus-client"]
fastapi = ["opentelemetry-instrumentation-fastapi"]
sqlalchemy = ["opentelemetry-instrumentation-sqlalchemy"]
celery = ["opentelemetry-instrumentation-celery"]
logging = ["opentelemetry-instrumentation-logging"]
all = ["pico-otel[otlp,prometheus,fastapi,sqlalchemy,celery,logging]"]
dev = ["pytest>=8", "pytest-asyncio", "pytest-cov>=5", "ruff"]

[project.urls]
Homepage = "https://github.com/dperezcabrera/pico-otel"
Documentation = "https://dperezcabrera.github.io/pico-otel/"
Repository = "https://github.com/dperezcabrera/pico-otel"
Changelog = "https://github.com/dperezcabrera/pico-otel/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/dperezcabrera/pico-otel/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pico_otel*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.1.0"
write_to = "src/pico_otel/_version.py"
write_to_template = "__version__ = '{version}'\n"

[project.entry-points."pico_boot.modules"]
pico_otel = "pico_otel"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "UP", "C901", "PLR1702"]
ignore = ["E501", "E701", "E731", "F401", "F811", "UP006", "UP007", "UP035", "UP045"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]

[tool.ruff.format]
quote-style = "double"
